Got part of the API to render on the Home Page

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -3,10 +3,10 @@
 	min-height: 100vh;
 	text-align: center;
 	align-items: center;
-	background-color: rgb(82, 176, 231);
-	border: 20px solid transparent;
+	background-color: rgba(0, 0, 0, 0.911);
+	border: 25px solid transparent;
 	padding: 5px;
-	border-image: url(../images/Pikaborder.jpg) 100 round;
+	border-image: url(../images/Pikaborder.jpg) 150 round;
 }
 
 .nav-wrapper {
@@ -14,7 +14,7 @@
 	background-size: 1400px 145px;
 	background-repeat: no-repeat;
 	height: 220px;
-	padding-top: 7%;
+	padding-top: 9%;
 }
 
 .nav {
@@ -30,7 +30,7 @@ a:link {
 }
 
 a:visited {
-	color: red;
+	color: skyblue;
 }
 
 a:hover {
