--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,5 @@
 .App {
-	background-image: url('../images/Mashup4.png');
+	/* background-image: url('../images/Mashup4.png'); */
 	background-repeat: no-repeat;
 	/* background-size: 100vw; */
 	background-position: bottom;
