--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -21,14 +21,21 @@
 }
 
 .text-button {
-	margin: 5px;
+	outline: 0;
+    height: 150px;
+}
+
+
+
+#home-clear{
+    /* margin-left: 10px; */
+    padding: 15px;
 }
 
 .home-response {
 	color: white;
-    display: grid;
-    grid-template-columns : repeat(auto-fill, minmax(min(200px, 100%), 1fr));
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr));
 	background-color: rgb(44, 169, 253);
 	padding: 45px;
 }
-
