--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -4,24 +4,25 @@
 	text-align: center;
 	align-items: center;
 	background-color: rgba(0, 0, 0, 0.911);
-	border: 25px solid transparent;
+	border: 35px solid transparent;
 	padding: 5px;
-	border-image: url(../images/Pikaborder.jpg) repeat 100 ;
+    border-image: url(../images/Pikaborder.jpg) 100 repeat;
 }
 
 .nav-wrapper {
 	background: url('../images/AnimeExtended3.png');
-	background-size: 1400px 145px;
+	background-size: 1350px 145px;
 	background-repeat: no-repeat;
 	height: 220px;
-	padding-top: 13%;
+	padding-top: 9%;
 }
 
 .nav {
 	display: flex;
 	list-style: none;
 	justify-content: space-evenly;
-	font-size: 25px;
+    font-size: 25px;
+    
 }
 
 a:link {
