--- a/src/styles/Comment.css
+++ b/src/styles/Comment.css
@@ -4,6 +4,7 @@
     display: flex;
     text-decoration: none;
     justify-content: center;
+    flex-direction: column;
 }
 
 .form-control{
@@ -11,6 +12,7 @@
     justify-content: center;
     list-style: none;
     text-decoration: none;
+    margin: 0 auto;
 }
 
 .buttons{
@@ -23,4 +25,13 @@
 .button{
     background-color: #4cb7ea;
     border: none;
+}
+
+.comment{
+    display: block;
+    color: white;
+}
+
+#create-button{
+    margin-left: 10px;
 }
