--- a/src/styles/SearchAPI.css
+++ b/src/styles/SearchAPI.css
@@ -1,6 +1,21 @@
 .blue{
     color: white;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(min(200px, 100%), 1fr, 1fr));
     background-color: rgb(44, 169, 253);
+}
+
+.image{
+    justify-self: center;
+}
+
+.button{
+    margin-left: 10px;
+    background-color: rgb(44, 169, 253);
+    color: white;
+}
+
+#label{
+    color: white;
+    
 }
