--- a/src/styles/SearchAPI.css
+++ b/src/styles/SearchAPI.css
@@ -17,5 +17,15 @@
 
 #label{
     color: white;
-    
+
+}
+
+.text-submit{
+    display: flex;
+    flex-direction: column;
+
+}
+
+h3{
+    font-family: 'Lobster', cursive;
 }
