--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -11,10 +11,12 @@
 
 .nav-wrapper {
 	background: url('../images/AnimeExtended3.png');
-	background-size: 1350px 145px;
+    background-size: auto;
 	background-repeat: no-repeat;
 	height: 220px;
-	padding-top: 9%;
+    padding-top: 9%;
+    background-position: center;
+    
 }
 
 .nav {
